BIPcompiled_handwritten/MainApp/errout.log
/home/ngallone/Documents/Thesis_code/WithEvgenii/BIPcompiled_handwritten/MainApp/output/virtualfunctions/src/virtualfunctions/AT__virtualfunctions__EvenBitcount.cpp: In constructor ‘AT__virtualfunctions__EvenBitcount::AT__virtualfunctions__EvenBitcount(const std::string&, AtomIPort__base__port1bool_xt&, AtomIPort__base__port1bool_xt&, AtomIPort__base__port_xt&, AtomEPort__base__port1bool_xt&, AtomEPort__base__port1bool_xt&)’:
/home/ngallone/Documents/Thesis_code/WithEvgenii/BIPcompiled_handwritten/MainApp/output/virtualfunctions/src/virtualfunctions/AT__virtualfunctions__EvenBitcount.cpp:66:144: warning: member ‘AT__virtualfunctions__EvenBitcount::_id__bit’ is used uninitialized [-Wuninitialized]
   66 |                          ) :  ComponentItf(name, ATOM), Atom(name) , _iport_decl__bit_input(_iport_decl__bit_input), _iport_decl_pv__bit_input(_id__bit), _iport_decl__out_output(_iport_decl__out_output), _iport_decl_pv__out_output(_id__even), _iport_decl__calc(_iport_decl__calc), _iport_decl_pv__calc(), _eport_decl__bit_input(_eport_decl__bit_input), _eport_decl__out_output(_eport_decl__out_output), _transguard__1(false), _transguard__2(false), _transguard__3(false), __previous(-1) {
      |                                                                                                                                                ^~~~~~~~
/home/ngallone/Documents/Thesis_code/WithEvgenii/BIPcompiled_handwritten/MainApp/output/virtualfunctions/src/virtualfunctions/AT__virtualfunctions__EvenBitcount.cpp:66:232: warning: member ‘AT__virtualfunctions__EvenBitcount::_id__even’ is used uninitialized [-Wuninitialized]
   66 |                          ) :  ComponentItf(name, ATOM), Atom(name) , _iport_decl__bit_input(_iport_decl__bit_input), _iport_decl_pv__bit_input(_id__bit), _iport_decl__out_output(_iport_decl__out_output), _iport_decl_pv__out_output(_id__even), _iport_decl__calc(_iport_decl__calc), _iport_decl_pv__calc(), _eport_decl__bit_input(_eport_decl__bit_input), _eport_decl__out_output(_eport_decl__out_output), _transguard__1(false), _transguard__2(false), _transguard__3(false), __previous(-1) {
      |                                                                                                                                                                                                                                        ^~~~~~~~~
/home/ngallone/Documents/Thesis_code/WithEvgenii/BIPcompiled_handwritten/MainApp/output/base/src/base/InterV__base__flow1floatAndExport_xt.cpp: In constructor ‘InterV__base__flow1floatAndExport_xt::InterV__base__flow1floatAndExport_xt(const ConnT__base__flow1floatAndExport_xt&, const Interaction&, const std::vector<PortValue*>&)’:
/home/ngallone/Documents/Thesis_code/WithEvgenii/BIPcompiled_handwritten/MainApp/output/base/src/base/InterV__base__flow1floatAndExport_xt.cpp:8:28: warning: member ‘InterV__base__flow1floatAndExport_xt::_id__value’ is used uninitialized [-Wuninitialized]
    8 |         mExportedPortValue(_id__value) {
      |                            ^~~~~~~~~~
/home/ngallone/Documents/Thesis_code/WithEvgenii/BIPcompiled_handwritten/MainApp/output/filestuff/src/filestuff/AT__filestuff__TestWriter.cpp: In constructor ‘AT__filestuff__TestWriter::AT__filestuff__TestWriter(const std::string&, AtomIPort__base__port1bool_xt&, AtomIPort__base__port_xt&, AtomEPort__base__port1bool_xt&, std::string, int)’:
/home/ngallone/Documents/Thesis_code/WithEvgenii/BIPcompiled_handwritten/MainApp/output/filestuff/src/filestuff/AT__filestuff__TestWriter.cpp:66:191: warning: member ‘AT__filestuff__TestWriter::_id__data_to_write’ is used uninitialized [-Wuninitialized]
   66 |                          , std::string _comp_param__filename, int _comp_param__maxlines) :  ComponentItf(name, ATOM), Atom(name) , _iport_decl__recv(_iport_decl__recv), _iport_decl_pv__recv(_id__data_to_write), _iport_decl__write(_iport_decl__write), _iport_decl_pv__write(), _eport_decl__recv(_eport_decl__recv), _comp_param__filename(_comp_param__filename), _comp_param__maxlines(_comp_param__maxlines), _transguard__1(false), _transguard__2(false), _transguard__3(false), __previous(-1) {
      |                                                                                                                                                                                               ^~~~~~~~~~~~~~~~~~
/home/ngallone/Documents/Thesis_code/WithEvgenii/BIPcompiled_handwritten/MainApp/output/filestuff/src/filestuff/AT__filestuff__TestWriter.cpp: In member function ‘virtual BipError& AT__filestuff__TestWriter::initialize()’:
/home/ngallone/Documents/Thesis_code/WithEvgenii/BIPcompiled_handwritten/MainApp/output/filestuff/src/filestuff/AT__filestuff__TestWriter.cpp:269:19: error: ‘openOutStream’ was not declared in this scope; did you mean ‘openStream’?
  269 |     _id__stream = openOutStream(_comp_param__filename);
      |                   ^~~~~~~~~~~~~
      |                   openStream
make[3]: *** [filestuff/CMakeFiles/pack__filestuff.dir/build.make:76 : filestuff/CMakeFiles/pack__filestuff.dir/src/filestuff/AT__filestuff__TestWriter.cpp.o] Erreur 1
make[2]: *** [CMakeFiles/Makefile2:280 : filestuff/CMakeFiles/pack__filestuff.dir/all] Erreur 2
make[1]: *** [Makefile:91 : all] Erreur 2
